# cardQt

./: .gitignore  CMakeLists.txt  README.md  capturesettingsdialog.cpp  capturesettingsdialog.h  capturewindow.cpp  capturewindow.h  cuttinganalyzer.cpp  cuttinganalyzer.h  cuttingconfigdialog.cpp  cuttingconfigdialog.h  cuttingwindow.cpp  cuttingwindow.h  data.yaml  defectdetector.cpp  defectdetector.h  dimensionsdialog.cpp  dimensionsdialog.h  imagestitcher.cpp  imagestitcher.h  main.cpp  mainwindow.cpp  mainwindow.h  motorizedcapturesettingsdialog.cpp  motorizedcapturesettingsdialog.h  motorizedcapturewindow.cpp  motorizedcapturewindow.h  sstack.txt  welcomewindow.cpp  welcomewindow.h  xstacking.txt
scripts/: defect_detector.py
